# postman

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
specs/compact-tab-layout/: spec.md
specs/horizontal-platform-selector/: spec.md
specs/modern-minimal-styling/: spec.md
specs/platform-selector/: spec.md
specs/scrollable-form-layout/: spec.md
specs/tui-framework/: spec.md
specs/two-column-form-layout/: spec.md
src/postman/: __init__.py  app.py  config.py  llm.py  prompts.py
src/postman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
